Adjust equations width to prevent flickering

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -361,7 +361,7 @@ h2 {
 
 #bottom-half .equations {
   font-style: italic;
-  min-width: 125px;
+  min-width: 135px;
 }
 
 #bottom-half .equations .row-2,
